fix small edge case with collapse

--- a/docs/src/app/pages/components/Buttons/style.scss
+++ b/docs/src/app/pages/components/Buttons/style.scss
@@ -17,6 +17,6 @@
   display: inline-flex;
 
   > div {
-    margin-right: 16px;
+    margin-right: 32px;
   }
 }
